--- a/src/app/interface/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/interface/widgets/nav-bar/nav-bar.component.html
@@ -1,4 +1,8 @@
 <nav class="p-4 flex justify-between gap-4">
-  <div class="p-4">dasd</div>
-  <div>ewqd</div>
+  <div class="p-4">
+    <a routerLink="/"><h1>vibes tracker</h1></a>
+  </div>
+  <div>
+
+  </div>
 </nav>
