--- a/src/app/angular-core/app.component.scss
+++ b/src/app/angular-core/app.component.scss
@@ -1,40 +1,40 @@
-.main {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  position: relative;
+// .main {
+//   min-height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   box-sizing: border-box;
+//   position: relative;
 
-  .header {
-      width: 100%;
-      max-width: 100vw;
-      box-sizing: border-box;
+//   .header {
+//       width: 100%;
+//       max-width: 100vw;
+//       box-sizing: border-box;
 
-      overflow: hidden; // TODO
+//       overflow: hidden; // TODO
 
-      position: sticky;
-      top: 0;
-      z-index: 100;
-  }
+//       position: sticky;
+//       top: 0;
+//       z-index: 100;
+//   }
 
-  .router {
-      position: relative;
-      width: 100%;
-      box-sizing: border-box;
+//   .router {
+//       position: relative;
+//       width: 100%;
+//       box-sizing: border-box;
 
-      flex: 1;
+//       flex: 1;
 
-      align-self: flex-start;
+//       align-self: flex-start;
 
-      display: flex;
-      flex-direction: column;
+//       display: flex;
+//       flex-direction: column;
 
-      router-outlet {
-          display: none;
-      }
-      > * {
-          width: 100%;
-          flex: 1;
-      }
-  }
-}
+//       router-outlet {
+//           display: none;
+//       }
+//       > * {
+//           width: 100%;
+//           flex: 1;
+//       }
+//   }
+// }
