--- a/src/app/interface/pages/user-top-items/user-top-items.component.html
+++ b/src/app/interface/pages/user-top-items/user-top-items.component.html
@@ -1,1 +1,6 @@
-<p>user-top-items works!</p>
+<div>
+  <app-user-top-items-simple
+  [itemsType]="'tracks'"
+  [periodOfTime]="'short_term'"
+  ></app-user-top-items-simple>
+</div>
