--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -11,8 +11,8 @@
     color: var(--white-color);
     font-family: var(--standard-font);
 
-    margin: 0;
-    padding: 0;
+    // margin: 0;
+    // padding: 0;
     // font-size: var(--medium-font-size);
 
     transition: var(--quick-transition);
