--- a/src/app/interface/pages/user-top-items/user-top-items.component.html
+++ b/src/app/interface/pages/user-top-items/user-top-items.component.html
@@ -1,6 +1,6 @@
 <div>
   <app-user-top-items-simple
-  [itemsType]="'tracks'"
-  [periodOfTime]="'short_term'"
+  [itemsType]="this.itemsType()"
+  [periodOfTime]="this.periodOfTime()"
   ></app-user-top-items-simple>
 </div>
