--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,9 +15,9 @@
 
     --pure-white-color: #ffffff;
 
-    --primary-dark-color: #2d65b9;
-    --primary-color: #3375d8;
-    --primary-light-color: #3481f5;
+    --primary-dark-color: #fc3842;
+    --primary-color: #ff202b;
+    --primary-light-color: #df1c26;
 
     --small-font-size: 1rem;
     --medium-font-size: 16px;
