--- a/src/app/interface/features/cards/card-simple-album/card-simple-album.component.html
+++ b/src/app/interface/features/cards/card-simple-album/card-simple-album.component.html
@@ -1,11 +1,13 @@
-<div class="w-[180px] flex flex-row items-center gap-3 sm:w-[240px] md:w-[300px]">
+<div
+  class="w-full h-full flex items-center gap-3 box-border p-2 rounded-md bg-dark shadow-sm hover:shadow-md transition-all duration-200 ease-in-out"
+>
   @if (this.album() && this.album().type) {
     <!-- IMAGE -->
     <div class="flex-1">
-      <div class="w-[90px] h-[90px] sm:w-[120px] sm:h-[120px] md:w-[150px] md:h-[150px]">
+      <div class="w-full h-full aspect-square block bg-gray">
         <a routerLink="/album/{{ this.album().id }}">
           <img
-            class="w-full h-full overflow-hidden object-cover"
+            class="w-full h-full overflow-hidden object-cover rounded-sm"
             loading="lazy"
             [src]="this.album().images[0].url"
           />
@@ -14,36 +16,43 @@
     </div>
 
     <!-- ALBUM DATA -->
-    <div class="flex-2 overflow-hidden">
-      <!-- ALBUM NAME -->
-      <div class="">
-        <a class="w-min" routerLink="/album/{{ this.album().id }}">
-          <p class="font-bold truncate-1 w-max">{{ this.album().name }}</p>
-        </a>
-      </div>
-
-      <!-- ARTIST NAMES LIST -->
+    <div class="flex-1 overflow-hidden">
       <div>
-        <p class="truncate-2 text-sm">
-          @for (artist of album().artists; track $index) {
-            @if ($index < album().artists.length - 1) {
-              <a routerLink="/artist/{{ artist.id }}">
-                <span>{{ artist.name }}, </span>
-              </a>
-            } @else {
-              <a routerLink="/artist/{{ artist.id }}">
-                <span>{{ artist.name }}</span>
-              </a>
+        <div>
+          <p class="text-xl font-black text-gray">{{ this.index() }}#</p>
+        </div>
+      </div>
+      <div>
+        <!-- ALBUM NAME -->
+        <div class="">
+          <a class="w-min" routerLink="/album/{{ this.album().id }}">
+            <p class="font-bold truncate-1">{{ this.album().name }}</p>
+          </a>
+        </div>
+
+        <!-- ARTIST NAMES LIST -->
+        <div>
+          <p class="truncate-2 text-xs text-gray">
+            @for (artist of album().artists; track $index) {
+              @if ($index < album().artists.length - 1) {
+                <a routerLink="/artist/{{ artist.id }}">
+                  <span>{{ artist.name }}, </span>
+                </a>
+              } @else {
+                <a routerLink="/artist/{{ artist.id }}">
+                  <span>{{ artist.name }}</span>
+                </a>
+              }
             }
-          }
-        </p>
-      </div>
+          </p>
+        </div>
 
-      <!-- RELEASE YEAR -->
-      <div>
-        <p class="truncate-1 text-sm">
-          {{ this.album().release_date | date:'yyyy' }}
-        </p>
+        <!-- RELEASE YEAR -->
+        <div>
+          <p class="truncate-1 text-xs text-gray">
+            {{ this.album().release_date | date: 'yyyy' }}
+          </p>
+        </div>
       </div>
     </div>
   }
