--- a/src/app/interface/pages/user-top-items/user-top-items.component.html
+++ b/src/app/interface/pages/user-top-items/user-top-items.component.html
@@ -1,6 +1,8 @@
 <div>
-  <app-user-top-items-simple
-  [itemsType]="this.itemsType()"
-  [periodOfTime]="this.periodOfTime()"
-  ></app-user-top-items-simple>
+  <div>
+    <app-user-top-items-selector></app-user-top-items-selector>
+  </div>
+  <div>
+    <app-user-top-items-simple></app-user-top-items-simple>
+  </div>
 </div>
