--- a/src/app/interface/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/interface/widgets/nav-bar/nav-bar.component.html
@@ -1,8 +1,70 @@
-<nav class="p-4 flex justify-between gap-4">
-  <div class="p-4">
-    <a routerLink="/"><h1>vibes tracker</h1></a>
+<!-- <nav
+  class="selection-none h-20 flex justify-between align-center gap-4 bg-dark/75 backdrop-blur-sm"
+>
+  <div class="w-max h-full flex justify-center gap-4 align-center">
+    <a routerLink="/"><h1 class="font-black text-xl">vibes tracker</h1></a>
+    <a routerLink="/top"><p>top tracks</p></a>
   </div>
-  <div>
 
+  <div class="flex justify-center align-center">
+    <a routerLink="/settings"><p>settings</p></a>
   </div>
-</nav>
+</nav> -->
+
+<nav
+    class="select-none flex min-h-12 w-full justify-between bg-dark/75 backdrop-blur-sm"
+>
+    <div class="box-border flex">
+        <div class="box-border flex p-4">
+            <a routerLink="/">
+                <h1
+                    class="w-full text-2xl font-black text-primary hover:text-primary-light"
+                >
+                    vibes tracker
+                </h1>
+            </a>
+        </div>
+        <div class="courses-list box-border flex items-center gap-4 p-4">
+            <div>
+                <a routerLink="/top">
+                    <p
+                        class="w-max text-lg font-black text-gray hover:text-white"
+                    >
+                        top tracks
+                    </p>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="box-border flex items-center gap-4 p-4">
+        <!-- <div class="box-border">
+            <a routerLink="/tests">
+                <p class="text-lg font-black text-gray hover:text-white">
+                    тести
+                </p>
+            </a>
+        </div> -->
+        <div class="box-border">
+            <a routerLink="/settings">
+                <div class="medium-icon">
+                    <svg
+                        class="text-gray-800 h-[32px] w-[32px] dark:text-white"
+                        aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="32"
+                        height="32"
+                        fill="currentColor"
+                        viewBox="0 0 24 24"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="M12 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4h-4Z"
+                            clip-rule="evenodd"
+                        />
+                    </svg>
+                </div>
+            </a>
+        </div>
+    </div>
+  </nav>
+
