--- a/src/styles/pallete.scss
+++ b/src/styles/pallete.scss
@@ -1,19 +1,19 @@
-$pure-black-color: #000000;
+// $pure-black-color: #000000;
 
-$black-color: #080a0f;
-$black-light-color: #090b11;
+// $black-color: #080a0f;
+// $black-light-color: #090b11;
 
-$dark-color: #0c0e14;
-$dark-light-color: #10131b;
+// $dark-color: #0c0e14;
+// $dark-light-color: #10131b;
 
-$gray-color: #545a64;
-$gray-light-color: #8c94a5;
+// $gray-color: #545a64;
+// $gray-light-color: #8c94a5;
 
-$white-color: #fcfcfc;
-$white-light-color: #e6e6e6;
+// $white-color: #fcfcfc;
+// $white-light-color: #e6e6e6;
 
-$pure-white-color: #ffffff;
+// $pure-white-color: #ffffff;
 
-$primary-dark-color: #2d65b9;
-$primary-color: #3375d8;
-$primary-light-color: #3481f5;
+// $primary-dark-color: #2d65b9;
+// $primary-color: #3375d8;
+// $primary-light-color: #3481f5;
