--- a/src/app/interface/features/cards/card-simple-album/card-simple-album.component.html
+++ b/src/app/interface/features/cards/card-simple-album/card-simple-album.component.html
@@ -4,7 +4,7 @@
   @if (this.album() && this.album().type) {
     <!-- IMAGE -->
     <div class="flex-1">
-      <div class="w-full h-full aspect-square block bg-gray">
+      <div class="w-full h-full aspect-square block">
         <a routerLink="/album/{{ this.album().id }}">
           <img
             class="w-full h-full overflow-hidden object-cover rounded-sm"
