--- a/src/app/interface/features/cards/card-simple-artist/card-simple-artist.component.html
+++ b/src/app/interface/features/cards/card-simple-artist/card-simple-artist.component.html
@@ -4,7 +4,7 @@
   @if (this.artist() && this.artist().type) {
     <!-- IMAGE -->
     <div class="flex-1">
-      <div class="w-full h-full aspect-square block bg-gray">
+      <div class="w-full h-full aspect-square block">
         <a routerLink="/artist/{{ this.artist().id }}">
           <img
             class="w-full h-full overflow-hidden object-cover rounded-sm"
