--- a/src/app/interface/features/cards/card-simple-track/card-simple-track.component.html
+++ b/src/app/interface/features/cards/card-simple-track/card-simple-track.component.html
@@ -4,7 +4,7 @@
   @if (this.track() && this.track().type) {
     <!-- IMAGE -->
     <div class="flex-1">
-      <div class="w-full h-full aspect-square block bg-gray">
+      <div class="w-full h-full aspect-square block">
         <a routerLink="/track/{{ this.track().id }}">
           <img
             class="w-full h-full overflow-hidden object-cover rounded-sm"
