--- a/src/app/angular-core/app.component.html
+++ b/src/app/angular-core/app.component.html
@@ -1,3 +1,4 @@
-<main class="main">
+<main class="relative main">
+  <!-- <div class="absolute top-0 left-0 h-screen w-screen bg-dark/10 backdrop-blur-xl z-10"></div> -->
   <router-outlet />
 </main>
