--- a/src/app/interface/pages/extended-history/extended-history.component.html
+++ b/src/app/interface/pages/extended-history/extended-history.component.html
@@ -1,3 +1,3 @@
 <div>
-  <app-extended-history-upload-form></app-extended-history-upload-form>
+  <a routerLink="/extended-history/upload">Upload</a>
 </div>
