--- a/src/app/interface/widgets/extended-history-upload-form/extended-history-upload-form.component.html
+++ b/src/app/interface/widgets/extended-history-upload-form/extended-history-upload-form.component.html
@@ -1,6 +1,6 @@
 <div class="p-6 max-w mx-auto flex flex-col gap-6 justify-center items-center">
   <div class="w-full h-full min-h-[500px] flex justify-center items-center">
-    @if (status == 'idle' || status == 'error') {
+    @if (this.proccesingStatus == 'idle' || this.proccesingStatus == 'error') {
       <form class="w-full flex flex-col gap-6">
         <div class="rounded-md w-full p-8 bg-dark cursor-pointer">
           <div class="flex flex-col items-center justify-center gap-4">
@@ -43,15 +43,10 @@
           <div class="flex-shrink-0">
             <div
               [class]="
-                'h-8 w-8 rounded-full flex items-center justify-center ' +
-                (this.status.includes('Error')
-                  ? 'bg-red-100 text-red-500'
-                  : this.status.includes('Success')
-                    ? 'bg-green-100 text-green-500'
-                    : 'bg-blue-100 text-blue-500')
+                'h-8 w-8 rounded-full flex items-center justify-center bg-pure-white text-primary'
               "
             >
-              @switch (this.status) {
+              @switch (this.proccesingStatus) {
                 @case ('all-prepared') {
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -66,7 +61,7 @@
                     />
                   </svg>
                 }
-                @case ('all-resolved') {
+                @case ('all-prepared') {
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="h-5 w-5"
@@ -122,17 +117,14 @@
             </div>
           </div>
           <div class="flex-1 min-w-0">
-            @if (this.status !== 'all-prepared') {
+            @if (this.proccesingStatus !== 'all-prepared') {
               <p class="text-sm w-full text-gray truncate">
-                {{ this.status }}
+                {{ this.proccesingStatus }}
               </p>
             } @else if (this.canUpload) {
-              <button
-              >upload</button>
+              <button (click)="this.uploadHistory()">upload</button>
             } @else {
-              <p>
-                waiting readyness to upload...
-              </p>
+              <p>waiting readyness to upload...</p>
             }
             @if (this.startingDate && this.endingDate) {
               <p class="text-sm text-gray">
