--- a/src/app/interface/pages/login/login.component.html
+++ b/src/app/interface/pages/login/login.component.html
@@ -7,7 +7,7 @@
   </div>
   <a [href]="this.getAuthorizationUrl()" class="w-full">
     <button class="w-full py-2 bg-primary rounded-sm">
-      <p class="">Login with spotify</p>
+      <p class="font-black">Login with spotify</p>
     </button>
   </a>
 </div>
