--- a/src/app/interface/pages/extended-history/extended-history.component.html
+++ b/src/app/interface/pages/extended-history/extended-history.component.html
@@ -19,5 +19,10 @@
         >Upload more</a
       >
     </div>
+    <div>
+      @if (this.extendedDataIsLoaded()) {
+        <app-user-top-extended />
+      }
+    </div>
   </div>
 }
